# ai-chat-web-librarian

./: .gitignore  PR_DESCRIPTION.md  README.md  TEST_PLAN.md  WORKFLOW.md  pyproject.toml
.work/: IMPLEMENTATION_PLAN.md
chat_librarian/: base_downloader.py  chatgpt_downloader.py  downloader.py  gemini_downloader.py  logging_config.py  main.py
